--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
   },
   "dependencies": {
     "compression": "^1.7.1",
-    "mikro-orm": "^3.6.15",
-    "mongodb": "^3.5.9",
+    "firebase-admin": "^8.13.0",
     "polka": "next",
     "sirv": "^0.4.0"
   },
@@ -26,10 +25,10 @@
     "@babel/runtime": "^7.0.0",
     "@rollup/plugin-babel": "^5.0.0",
     "@rollup/plugin-commonjs": "^12.0.0",
+    "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^8.0.0",
     "@rollup/plugin-replace": "^2.2.0",
     "@types/express": "^4.17.7",
-    "@types/mongodb": "^3.5.25",
     "cssnano": "^4.1.10",
     "npm-run-all": "^4.1.5",
     "postcss-import": "^12.0.1",
