--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -29,6 +29,9 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v1
 
+      - run: npm ci
+      - run: npm i cypress
+
       - name: Cypress run
         uses: cypress-io/github-action@v2
         with:
