--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -34,6 +34,8 @@ jobs:
         with:
           record: true
           tag: node-${{ matrix.node }}
+          build: npm run build
+          start: npm run start
         env:
           CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
