--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/express": "^4.17.7",
     "cssnano": "^4.1.10",
     "cypress": "^4.10.0",
+    "firebase": "^7.16.0",
     "npm-run-all": "^4.1.5",
     "postcss-import": "^12.0.1",
     "postcss-nested": "^4.2.2",
@@ -40,6 +41,8 @@
     "rollup-plugin-svelte": "^5.0.1",
     "rollup-plugin-terser": "^5.3.0",
     "rollup-plugin-typescript2": "^0.27.1",
+    "rxfire": "^3.13.5",
+    "rxjs": "^6.6.0",
     "sapper": "^0.27.0",
     "svelte": "^3.0.0",
     "svelte-preprocess": "^4.0.6",
