--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,8 @@
     "module": "es2015",
     "esModuleInterop": true,
     "lib": ["es5", "es6", "dom"],
-    "experimentalDecorators": true
+    "experimentalDecorators": true,
+    "noImplicitAny": false,
+    "allowJs": true
   }
 }
