--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "rxjs": "^6.6.0",
     "sapper": "^0.27.0",
     "svelte": "^3.0.0",
+    "svelte-persistent-store": "^0.1.3",
     "svelte-preprocess": "^4.0.6",
     "tailwindcss": "^1.4.6",
     "tslint": "^6.1.2",
