--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@rollup/plugin-node-resolve": "^8.0.0",
     "@rollup/plugin-replace": "^2.2.0",
     "@types/express": "^4.17.7",
+    "cookie": "^0.4.1",
     "cssnano": "^4.1.10",
     "cypress": "^4.10.0",
     "firebase": "^7.16.0",
